--- a/public/css/general.css
+++ b/public/css/general.css
@@ -5,6 +5,8 @@
 
 body {
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .container {
@@ -99,4 +101,198 @@ body {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+.content {
+    width: calc(100% - 300px);
+    height: 100%;
+    padding: 2.5rem;
+}
+
+.title {
+    width: 100%;
+    color: #1D2630;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 0 0 1.5rem;
+    text-transform: uppercase;
+
+    @media screen and (min-width: 540px) {
+        font-size: 20px;
+        line-height: 28px;
+        margin: 0 0 .5rem;
+    }
+}
+
+.subtitle {
+    width: 100%;
+    color: #1D2630;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    margin: 0 0 1rem;
+
+    @media screen and (min-width: 540px) {
+        font-size: 16px;
+        line-height: 24px;
+        margin: 0 0 1rem;
+    }
+}
+
+.breadcrumb {
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    list-style: none;
+    padding: 0;
+    margin: 0 0 2rem;
+
+    .breadcrumb_item {
+        margin: 0 .5rem 0 0;
+        padding: 0;
+        font-size: 14px;
+        line-height: 21px;
+        font-family: 'Inter', sans-serif;
+        font-weight: 400;
+        color: #5B6B79;
+        position: relative;
+
+        .breadcrumb_link {
+            color: #5B6B79;
+            text-decoration: none;
+        }
+
+        &.active {
+            color: #1D2630;
+        }
+    }
+}
+
+.card {
+    width: 100%;
+    height: auto;
+    background-color: #ffffff;
+    border-radius: 8px;
+    border: 1px solid #e3e3e3;
+    box-shadow: 0 10px 40px rgba(0,0,0,0.1);
+
+    .card_header {
+        padding: 20px;
+        border-bottom: 1px solid #e3e3e3;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        .subtitle {
+            margin: 0;
+        }
+    }
+
+    .card_body {
+        padding: 25px;
+    }
+}
+
+.button_small {
+    max-width: max-content;
+    min-width: 130px;
+    display: flex;
+    padding: 11px 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 60px;
+    background: #4680FF;
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
+    color: #FFFFFF;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 22px;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
+.form-label {
+    color: #5B6B79;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+}
+
+.form-control {
+    width: 100%;
+    height: 45px;
+    padding: 0 20px;
+    border-radius: 4px;
+    border: 1px solid #EFEFEF;
+    background: #FFF;
+    color: #5B6B79;
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+
+    &:focus {
+        outline: 1px solid #335fbf;
+    }
+}
+
+.create-ticket {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-flow: wrap;
+    gap: 1rem;
+    box-sizing: border-box;
+
+    .form-label {
+        width: 100%;
+        display: block;
+        margin: 0 0 .5rem;
+    }
+
+   .group-form {
+       margin: 0 0 1rem;
+
+       &:nth-child(1n) {
+           width: 56.8%;
+       }
+
+       &:nth-child(2n) {
+           width: 20%;
+       }
+
+       &:nth-child(3n) {
+           width: 20%;
+       }
+
+       &:nth-child(4n) {
+           width: 20%;
+       }
+
+       &:nth-child(5n) {
+           width: 20%;
+       }
+
+       &:nth-child(6n) {
+           width: 56.8%;
+       }
+
+       &:nth-child(7n) {
+           width: 100%;
+       }
+   }
 }
